use pane_current_path when new window open

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,10 @@
 ## 既定の割り当てとして「Prefix - c」でウィンドウが作成できるが
 ## Prefix - Ctrl+cでも作成できるようにする
 unbind ^C
-bind ^C new-window
+bind c new-window -c "#{pane_current_path}"
+bind ^C new-window -c "#{pane_current_path}"
+bind % split-window -hc "#{pane_current_path}"
+bind '"' split-window -vc "#{pane_current_path}"
 
 ## Prefix - Ctrl+wでウィンドウ一覧選択を表示
 unbind ^W
@@ -12,8 +15,6 @@ unbind C-o
 
 bind-key C-n next-window
 bind-key C-p previous-window
-
-bind-key S split-window
 
 ## ウィンドウ番号を1から開始
 set-option -g base-index 1
@@ -35,8 +36,8 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# set -g default-terminal "screen-256color"
-set-option -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
+# set-option -g default-terminal "screen-256color"
 
 bind r source-file ~/.tmux.conf \; display-message "Reloaded config!"
 
