change status-right of tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,12 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 set -g default-terminal "screen-256color"
-# set-option -g default-terminal "screen-256color"
+
+set-option -g status-utf8 on
+set-option -g status-interval 1
+set-option -g status-right-length 40
+
+set-option -g status-right "🔋:#($HOME/bin/battery) 🕙:%Y/%-m/%-d(%a) %H:%M"
 
 bind r source-file ~/.tmux.conf \; display-message "Reloaded config!"
 
@@ -49,4 +54,4 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # prefix + Ctrl-r : 復元
 
 set -g @continuum-restore 'on'
-run '~/.tmux/plugins/tpm/tpm'
+run-shell '~/.tmux/plugins/tpm/tpm'
