--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,7 +42,7 @@ set-option -g status-utf8 on
 set-option -g status-interval 1
 set-option -g status-right-length 40
 
-set-option -g status-right "🔋:#($HOME/bin/battery) 🕙:%Y/%-m/%-d(%a) %H:%M"
+set-option -g status-right "🔋#($HOME/bin/battery) 🕙%Y/%-m/%-d(%a) %H:%M"
 
 bind r source-file ~/.tmux.conf \; display-message "Reloaded config!"
 
