--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,10 @@ unbind C-o
 bind-key C-n next-window
 bind-key C-p previous-window
 
+## ウインドウ位置を移動する
+bind-key < swap-window -t -
+bind-key > swap-window -t +
+
 ## ウィンドウ番号を1から開始
 set-option -g base-index 1
 
