--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,6 +33,7 @@ set-option -g history-limit 20000
 set-option -g default-shell /usr/local/bin/fish
 
 set-window-option -g mode-keys vi
+set-window-option -g utf8 on
 
 # vimのキーバインドでペインをリサイズする
 bind -r H resize-pane -L 5
