--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,9 @@ set-option -g history-limit 20000
 # デフォルトshell
 set-option -g default-shell /usr/local/bin/fish
 
+# set the ruled line to alternate charactoer set
+set -ag terminal-overrides ',*:U8=0'
+
 set-window-option -g mode-keys vi
 
 # vimのキーバインドでペインをリサイズする
