--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,6 +35,9 @@ set-option -g default-shell /usr/local/bin/fish
 # set the ruled line to alternate charactoer set
 set -ag terminal-overrides ',*:U8=0'
 
+# Extend the display time of display-panes
+set display-panes-time 10000
+
 set-window-option -g mode-keys vi
 
 # vimのキーバインドでペインをリサイズする
