--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,13 +30,12 @@ set-option -g escape-time 10
 set-option -g history-limit 20000
 
 # デフォルトshell
-set-option -g default-shell /usr/local/bin/fish
+set-option -g default-shell "${TMUX_SHELL}"
 
 # set the ruled line to alternate charactoer set
 set -ag terminal-overrides ',*:U8=0'
 
-# Extend the display time of display-panes
-set display-panes-time 10000
+bind-key C-g display-panes -d 10000
 
 set-window-option -g mode-keys vi
 
