--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /configs/fish/fish_variables
+/configs/fish/fundle
 /configs/fish/functions
 /configs/fish/completions
 /configs/karabiner/automatic_backups/*.json
