--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,6 +46,8 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 set -g default-terminal "screen-256color"
+set-option -g mouse on
+bind-key m if-shell "tmux show-options -g mouse | grep off" "set-option -g mouse on" "set-option -g mouse off"
 
 set-option -g status-interval 1
 set-option -g status-right-length 40
